name:          reactor
category:      Concurrency
version:       0.1.1
license:       BSD3
cabal-version: >= 1.2
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://comonad.com/reader/
copyright:     Copyright (C) 2011 Edward A. Kmett
synopsis:      Reactor - task parallel reactive programming
description:   Reactor - task parallel reactive programming
build-type:    Simple

library
  build-depends: 
    base >= 4 && < 4.4,
    array >= 0.3.0 && < 0.4,
    functor-apply >= 0.6 && < 0.8,
    bits-atomic >= 0.1.3 && < 0.2,
    comonad >= 0.6 && < 0.7,
    mtl >= 2.0.1.0 && < 2.1

  exposed-modules:
    Reactor.Atomic
    Reactor.Contravariant
    Reactor.Deque
    Reactor.Filtered
    Reactor.Moore
    Reactor.Observer
    Reactor.Observable
    Reactor.Subscription
    Reactor.Task

  ghc-options: -Wall 
